# togai

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  ANALYSIS_REPORT.md  APKTOOL_ANALYSIS_TOOL.md  BUILD_ERROR_ANALYSIS.md  BUILD_FIX_REPORT.md  BUILD_FIX_SUMMARY.md  BUILD_INSTRUCTIONS.md  CLAUDE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_SUMMARY.md  COMPLETION_REPORT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  EVOLUTION_REPORT.md  FORMATTING_FIX_REPORT.md  IMPLEMENTATION_REPORT.md  LAYLA_PHASE5_SUMMARY.md  LAYLA_PHASE6_SUMMARY.md  MANIFEST.in  Makefile  OPTIMIZATION_REPORT.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE5_PHASE6_VERIFICATION_REPORT.md  README.md  README_BUILD.md  README_CI.md  REPAIR_ANALYSIS.md  REPAIR_REPORT.md  TOGA_IMPLEMENTATION_SUMMARY.md  TROUBLESHOOTING.md  UPGRADE_GUIDE.md  UPGRADE_SUMMARY.md  analyze_apktool.py  analyze_smali_architecture.py  apply_repairs.sh  build.gradle.kts  build.sh  (+20 more)
.github/: PULL_REQUEST_TEMPLATE.md  README.md
app/: build.gradle.kts  google-services.json  proguard-rules.pro
archive/: ALL_PHASES_COMPLETE_SUMMARY.md  COMPREHENSIVE_CHANGES_SUMMARY.md  LAYLA_PHASE1_SUMMARY.md  LAYLA_PHASE2_SUMMARY.md  LAYLA_PHASE3_SUMMARY.md  LAYLA_PHASE4_SUMMARY.md  PHASE2_COMPLETE.md  PHASE4A_CAUSAL_REASONING_SUMMARY.md
docs/: API_INTEGRATION.md  APKTOOL_ANALYSIS.md  ARM64_NATIVE_LIBRARIES.md  CAUSAL_REASONING_ENGINE.md  COGNITIVE_COMPUTING.md  INDEX.md  LAYLA_DEVELOPMENT_ROADMAP.md  LAYLA_PHASE1_IMPLEMENTATION.md  LAYLA_PHASE1_VISUAL_SUMMARY.md  MANIFEST_COGNITIVE_INTEGRATION.md  PHASE4_DISTRIBUTED_COGNITIVE_MESH.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE5_RECURSIVE_META_COGNITION.md  PHASE6_RIGOROUS_TESTING_DOCUMENTATION.md  PLANETARY_NEURAL_NETWORK.md  README.md  REFERENCE_CONTEXT.md  SMALI_ARCHITECTURE_ANALYSIS.md  SMALI_DETAILED_ANALYSIS.md  SMALI_MANIFEST_ANALYSIS.md  SYSTEM_COMPONENTS.md  TECHNICAL_ARCHITECTURE.md  TOGAI_GENERALIZATION_ROADMAP.md  TOGA_WONDERFUL_DESIGN.md
gradle/: libs.versions.toml
python/: README.md  __init__.py  requirements.txt
ref/: Discover Layla Update Features _ Tutorials, FAQs & Latest News.md  Experience the Best Offline AI Assistant _ Layla AI.md  Explore Layla - Your Private AI for the People_ Secure, Innovative, and Tailored AI Solutions..md  Layla's On-Device AI Features _ Create, Customize, and Innovate.md  README.md  Top AI Assistant Apps for iPhone _ Best AI Tools.md
src/: AndroidManifest.xml  apktool.yml
tests/: __init__.py  (+5 more)
(+27410 files in other folders)
